--- a/app/views/tracked_keywords/new.html.erb
+++ b/app/views/tracked_keywords/new.html.erb
@@ -1,11 +1,9 @@
-<% content_for :title, "New tracked keyword" %>
-
-<h1>New tracked keyword</h1>
+<h1><%= t('.title') %></h1>
 
 <%= render "form", tracked_keyword: @tracked_keyword %>
 
 <br>
 
 <div>
-  <%= link_to "Back to tracked keywords", tracked_keywords_path %>
+  <%= link_to t('.back'), tracked_keywords_path %>
 </div>
