--- a/app/views/tracked_keywords/show.html.erb
+++ b/app/views/tracked_keywords/show.html.erb
@@ -1,35 +1,40 @@
-<p style="color: green"><%= notice %></p>
+<div>
+  <p>
+    <strong><%= t('.keyword') %>:</strong>
+    <%= @tracked_keyword.keyword %>
+  </p>
 
-<%= render @tracked_keyword %>
+  <p>
+    <strong><%= t('.domain') %>:</strong>
+    <%= @tracked_keyword.domain %>
+  </p>
+</div>
 
 <div>
-  <%= link_to "Edit this tracked keyword", edit_tracked_keyword_path(@tracked_keyword) %> |
-  <%= link_to "Back to tracked keywords", tracked_keywords_path %>
+  <%= link_to t('.edit'), edit_tracked_keyword_path(@tracked_keyword) %> |
+  <%= link_to t('.back'), tracked_keywords_path %>
 
-  <%= button_to "Destroy this tracked keyword", @tracked_keyword, method: :delete %>
+  <%= button_to t('.destroy'), @tracked_keyword, method: :delete %>
 </div>
 
 <hr>
 
-<h2>Ranking History</h2>
+<h2><%= t('.ranking_history') %></h2>
 
-<div data-controller="seo-check" data-seo-check-url-value="<%= check_rank_tracked_keyword_path(@tracked_keyword) %>">
-  <button data-action="click->seo-check#check">Verificar Ranking Agora</button>
-  <span data-seo-check-target="status"></span>
-</div>
-<br>
+<%# Assumindo que você tem uma rota 'check_ranking_tracked_keyword_path' para disparar o worker %>
+<%= button_to t('.check_ranking_now'), check_ranking_tracked_keyword_path(@tracked_keyword), method: :post %>
 
 <table>
   <thead>
     <tr>
-      <th>Date</th>
-      <th>Position</th>
+      <th><%= t('.date') %></th>
+      <th><%= t('.position') %></th>
     </tr>
   </thead>
   <tbody>
-    <% @ranking_histories.each do |history| %>
+    <% @tracked_keyword.ranking_histories.order(checked_on: :desc).each do |history| %>
       <tr>
-        <td><%= history.checked_on.strftime("%d/%m/%Y") %></td>
+        <td><%= history.checked_on.strftime("%Y-%m-%d") %></td>
         <td><%= history.position %></td>
       </tr>
     <% end %>
